Closed Bug 1344454 Opened 8 years ago Closed 8 years ago

testGCGrayMarking test sometimes fails with compacting GC zeal enabled

Categories

(Core :: JavaScript: GC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(1 file)

The test makes use of unrooted pointers for testing purposes. If compacting GC happens than these pointers don't get updated and the test can fail or crash.
Patch to disable CGC during this test.
Attachment #8843557 - Flags: review?(jdemooij)
Attachment #8843557 - Flags: review?(jdemooij) → review+
Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/63f4a611e340 Disable compacting GC in testGCGrayMarking test r=jandem
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: