Bug 1344454 - Disable compacting GC in testGCGrayMarking test r=jandem